# reap-expert-swap

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  PROGRESS.md  README.md  RESEARCH.md  SECURITY.md  forensic_bundle.py  one_request_forensic_replay.py  pyproject.toml  reap_plan.schema.md  remote_auth.py  research.md  status.md
.github/: CODEOWNERS
analysis/: 01-system-architecture.md  02-root-cause-analysis.md  03-scoring-pipeline-trace.md  04-reap-paper-comparison.md  05-vllm-runtime-analysis.md  06-budget-arithmetic.md  07-dataset-methodology-audit.md  08-strict30-v2-spec.md  09-validation-script-design.md  NEXT-STEP.md  README.md  report.html
assets/: bf16-baseline-seed7-s10.json  strict30-best-plan.json  strict30-v2-plan.json
configs/: README.md
dataset/: README.md
docs/: research_history_20260312.md  system_technical_report_20260312.md
example/: strict30-v2-plan.json
production/: README.md
reap_swap/: __init__.py  dynamic_reap.py  evaluate_original_vs_multiplex.py  multiplex_cache.py  research_gate.py  size_estimator.py  vllm_multiplex_server.py
scripts/: build_partitioned_reap_plan.py  build_profiled_floor_plan.py  build_support_router_dataset.py  compact_offload.py  dynamic_reap.py  dynamic_swap_delta.py  evaluate_original_vs_multiplex.py  multiplex_cache.py  personal_activation_corpus.py  profile_router_activity.py  research_gate.py  router_activity.py  run_budget_oracle_analysis.py  size_estimator.py  support_router.py  train_support_router.py  vllm_multiplex_server.py
test-output/: 30pct-isolation-next-steps-2026-03-15.md  (+7 more)
(+306 files in other folders)
